2006-09-17  Mei Ligang  <ligang@sunnorth.com.cn>

	* gas/score: New directory.
	* gas/elf/section2.e-score: New file.
	* gas/elf/elf.exp: Add special case for Score target.

2006-09-16  Paul Brook  <paul@codesourcery.com>

	* gas/arm/unwind.s: Test two argument form of .movsp.
	* gas/arm/unwind.d: Update expected output.
	* gas/arm/unwind_vxworks.d: Ditto.

2006-09-08  Kazu Hirata  <kazu@codesourcery.com>

	* lib/gas-dg.exp (gas-dg-test): Treat $dir as a literal.

2006-09-08  Paul Brook  <paul@codesourcery.com>

	* gas/arm/arm-it.s: New test.
	* gas/arm/arm-it.d: New test.

2006-09-07  Paul Brook  <paul@codesourcery.com>

	* gas/arm/neon-omit.s: Test three-argument variants.
	* gas/arm/neon-omit.d: Update expected output.

2006-09-04  Paul Brook  <paul@codesourcery.com>

	* gas/arm/neon-cov.s: Test .u and .s aliases for .i suffixes.
	* gas/arm/neon-cov.d: Adjust expected output.

2006-08-21  Joseph Myers  <joseph@codesourcery.com>

	* gas/arm/unwind.s: Test not merging iWMMXt register save with
	previous long opcode.
	* gas/arm/unwind.d, gas/arm/unwind_vxworks.d: Update.

2006-08-16  Julian Brown  <julian@codesourcery.com>

	* gas/arm/noarm.s: Add test for disabled ARM insns.
	* gas/arm/noarm.d: Drive test for above.
	* gas/arm/noarm.l: Expected error output.

2006-08-15  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>
            David Ung  <davidu@mips.com>

	* gas/mips/mips.exp: Handle mips*-sde-elf*.

2006-08-04  Dwarakanath Rajagopal  <dwarak.rajagopal@amd.com>

	* sse2.d: Fixed the correct result for cvtpi2pd, cvtpd2pi 
	and cvttpd2pi.

2006-08-12  Thiemo Seufer  <ths@networkno.de>

	* gas/mips/mips16-save.d: Fix testcase.

2006-08-08  Bob Wilson  <bob.wilson@acm.org>

	* gas/lns/lns-common-1-alt.d: New file.
	* gas/lns/lns.exp: Use lns-common-1-alt.d for xtensa targets.

2006-08-04 Pedro Alves <pedro_alves@portugalmail.pt>

	* gas/arm/wince.s: New test.
	* gas/arm/wince.d: New test.
